Began building UI from configs, created scripts to manage configs and start frontend + backend

--- a/frontend/src/components/Screen/Screen.module.scss
+++ b/frontend/src/components/Screen/Screen.module.scss
@@ -1,5 +1,6 @@
 .screen {
   border: var(--common-border-size) solid var(--border-color);
   border-radius: var(--common-border-radius);
+  margin: var(--screen-margin);
   padding: var(--common-padding);
 }
