--- a/frontend/src/components/ScreenGroup/ScreenGroup.module.scss
+++ b/frontend/src/components/ScreenGroup/ScreenGroup.module.scss
@@ -1,8 +1,22 @@
 .group {
+  background-color: var(--screen-group-background-color);
+  border-radius: var(--common-border-radius);
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  margin-bottom: var(--common-margin);
+  padding: var(--common-padding);
+  width: 100vw;
+}
+
+.screens {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 100%;
 }
 
 .header {
-  
+  font-size: var(--screen-group-header-size);
+  margin-top: 0rem;
 }
